<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_centerInParent="true"
        android:text="Button" />

    <Button
        android:id="@+id/aboveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button"
        android:layout_alignLeft="@id/button"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="0dp"
        android:text="@string/aboveBtn" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/button"
        android:text="@string/rightBtn" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button"
        android:layout_centerVertical="false"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@id/button"
        android:text="@string/leftBtn" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignLeft="@id/button"
        android:layout_centerHorizontal="false"
        android:text="@string/belowBtn" />
</RelativeLayout>