<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/buffalo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/profile"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/name"
        android:layout_alignBottom="@id/name"
        android:layout_toRightOf="@id/name"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/date"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignLeft="@id/name"
        android:layout_alignBottom="@id/profile"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="textPersonName"
        android:paddingTop="5dp"
        android:text="@string/exp"
        android:textSize="18sp" />
</RelativeLayout>